--- a/src/main/webapp/WEB-INF/templates/footer.html
+++ b/src/main/webapp/WEB-INF/templates/footer.html
@@ -1,3 +1,3 @@
-<div class="em-footer bar" th:fragment="fragment">
-    <span>Carlo Chiodaroli am Polytechnikum Mailand</span>
-</div>
+<footer class="em-footer bar" th:fragment="fragment">
+    <span>Carlo Chiodaroli - Estimate Management - 2022</span>
+</footer>
