--- a/src/main/webapp/WEB-INF/templates/header.html
+++ b/src/main/webapp/WEB-INF/templates/header.html
@@ -1,7 +1,7 @@
-<div class="em-header bar" th:fragment="fragment (user)">
+<header class="em-header bar" th:fragment="fragment (user)">
     <span th:text="'Welcome ' + ${user.username}"></span>
     <div>
         <a class="my-button home-button" href="GoToHome">Home</a>
         <a class="my-button logout-button" href="Logout">Logout</a>
     </div>
-</div>
+</header>
