--- a/src/main/webapp/styles/forms.css
+++ b/src/main/webapp/styles/forms.css
@@ -3,29 +3,27 @@ form {
     gap: .5rem;
     flex-direction: row;
     align-items: center;
+    width: fit-content;
+    margin: auto;
 }
 
-form  > label {
+form > label {
     border-color: var(--accent-color);
     border-radius: var(--little-radius);
     padding: var(--little-padding);
     display: grid;
     grid-auto-flow: column;
     gap: 1rem;
-    width: 100%
+    width: 100%;
 }
 
 form > label > input,
 form > label > select {
     border-radius: var(--little-radius);
     padding: var(--little-padding);
-    min-width: fit-content;
-    width: 13rem;
+    min-width: 13em;
+    width: fit-content;
     margin: auto 0 auto auto;
-    font-size: 1rem;
-    border-color: var(--accent-color);
-    background-color: var(--background-lev2);
-
 }
 
 form > label > input:focus {
@@ -46,6 +44,8 @@ form > label > span {
     font-size: 1rem;
 }
 
-form > .form-title {
+form > h2 {
     font-size: 1.5rem;
+    text-align: center;
+    margin: auto;
 }
