Copied more pure HTML version updates

--- a/src/main/webapp/WEB-INF/templates/header.html
+++ b/src/main/webapp/WEB-INF/templates/header.html
@@ -5,3 +5,11 @@
         <a class="my-button logout-button" href="Logout">Logout</a>
     </div>
 </header>
+
+<header class="em-header bar" th:fragment="fragment">
+    <span>Welcome</span>
+    <div>
+        <a class="my-button home-button" href="GoToHome">Home</a>
+        <a class="my-button logout-button" href="Logout">Logout</a>
+    </div>
+</header>
