--- a/src/main/webapp/styles/forms.css
+++ b/src/main/webapp/styles/forms.css
@@ -16,6 +16,11 @@ form > label {
     width: 100%;
 }
 
+input:invalid {
+    background-color: pink;
+    color: crimson;
+}
+
 form > label > input,
 form > label > select {
     border-radius: var(--little-radius);
